# roboticsfinal

./: readme.md
robot/: robots.world
robot/models/my_robot/: model.sdf
robot/models/my_robot/meshes/: two_wheel.dae  wheel.dae
robot/models/my_robot_four/: model.config  model.sdf
robot/models/my_robot_four/meshes/: four_wheel.dae
robot/models/my_robot_six/: model.config  model.sdf
robot/models/my_robot_six/meshes/: scoop.dae  six_wheel.dae
robot/robotros/devel/: .catkin
robot/robotros/devel/lib/pkgconfig/: robot_gazebo.pc
robot/robotros/devel/share/robot_gazebo/cmake/: robot_gazeboConfig.cmake
robot/robotros/src/robot_gazebo/: CMakeLists.txt  package.xml
robot/robotros/src/robot_gazebo/launch/: robots.launch
robot/robotros/src/robot_gazebo/src/: twowheel.cpp  worldplugin.cpp
robot/twowheel/: CMakeLists.txt
robot_arm/devel/: .catkin  .rosinstall
robot_arm/src/assignment_arm/: CMakeLists.txt  package.xml
robot_arm/src/assignment_arm/src/: arm_angle.cpp
robot_arm/src/assignment_arm/src/launch/: arm.launch
robot_arm/src/assignment_arm/src/models/assignment_arm/: model.config  model.sdf
robot_arm/src/assignment_arm/src/msg/: arm_angle.msg
robot_arm/src/assignment_arm/src/worlds/: plane.world
